# spotifier-core

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  login_fail.html  login_page.html
src/: cache.rs  client.rs  error.rs  lib.rs  models.rs
src/parsers/: mod.rs  user.rs
tests/: all_topics_test.rs  cache_test.rs  delay_test.rs  integration_test.rs  period_test.rs  task_test.rs
