[package]
name = "spotifier-core"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.1", features = ["cookies", "json", "form"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15"
